--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(>_<)</title>
-    
+
+     <!-- Title Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz@10..100&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+     <!-- Body Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="style.css">
 </head>
 <header>
     <nav>
@@ -17,6 +23,7 @@
             <li class="nav-bar-item"><a href="#"></a>Home</li>
             <li class="nav-bar-item"><a href="#"></a>About Us</li>
             <li class="nav-bar-item"><a href="#"></a>Careers</li>
+            <input class="search-bar search-field-font" type="text" placeholder="Search...">
         </ul>
     </nav>
 </header>
