--- a/Index.html
+++ b/Index.html
@@ -28,5 +28,16 @@
     </nav>
 </header>
 <body>
+    <section>
+        <div class="vertical-line"></div>
+        <div class="section_1_leftside">
+            <h1>News from <span style="color:#8C1111;">past</span></h1>
+            <h1 style="padding-left:48px;">And even from <span style="color:#8C1111;">future</span></h1>
+
+        </div>
+        <div class="section_1_rightside">
+
+        </div>
+    </section>
 </body>
 </html>
