--- a/LandingPage.html
+++ b/LandingPage.html
@@ -14,6 +14,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="style.css">
 </head>
@@ -28,15 +31,16 @@
     </nav>
 </header>
 <body>
-    <section>
-        <div class="vertical-line"></div>
-        <div class="section_1_leftside">
-            <h1>News from <span style="color:#8C1111;">past</span></h1>
-            <h1 style="padding-left:48px;">And even from <span style="color:#8C1111;">future</span></h1>
-
+    <section class="row" style="margin:164px 0px 0px 0px;">
+        <!-- <div class="vertical-line col-2"></div> -->
+        <div class="col-1"></div>
+        <div class="section_1_leftside col-5">
+            <h1 style="width: fit-content;">News from <span style="color:#8C1111;">past</span></h1>
+            <h1 style="padding-left:48px; width: fit-content;">And even from <span style="color:#8C1111;">future</span></h1>
         </div>
-        <div class="section_1_rightside">
-
+        <div class="vertical-line"></div>
+        <div class="section_1_rightside col-5">
+            <img style="border-radius:70px;" src="images/image 1.jpg">
         </div>
     </section>
 </body>
